--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_linkify: ^6.0.0
   flutter_localizations:
     sdk: flutter
+  flutter_mdi_icons: ^0.1.1
   flutter_multi_formatter: ^2.7.4
   flutter_otp_text_field: ^1.1.0+2
   flutter_rating_bar: ^4.0.1
@@ -98,31 +99,31 @@ flutter:
   uses-material-design: true
   # generate: true
   assets:
-  - assets/icons/
-  - assets/images/
-  - assets/material/
+    - assets/icons/
+    - assets/images/
+    - assets/material/
 
 flutter_gen:
   output: lib/src/core/assets
 
 fonts:
-- family: Poppins
-  fonts:
-  - asset: fonts/Poppins-Thin.ttf
-    weight: 100
-  - asset: fonts/Poppins-ExtraLight.ttf
-    weight: 200
-  - asset: fonts/Poppins-Light.ttf
-    weight: 300
-  - asset: fonts/Poppins-Regular.ttf
-    weight: 400
-  - asset: fonts/Poppins-Medium.ttf
-    weight: 500
-  - asset: fonts/Poppins-SemiBold.ttf
-    weight: 600
-  - asset: fonts/Poppins-Bold.ttf
-    weight: 700
-  - asset: fonts/Poppins-ExtraBold.ttf
-    weight: 800
-  - asset: fonts/Poppins-Black.ttf
-    weight: 900
+  - family: Poppins
+    fonts:
+      - asset: fonts/Poppins-Thin.ttf
+        weight: 100
+      - asset: fonts/Poppins-ExtraLight.ttf
+        weight: 200
+      - asset: fonts/Poppins-Light.ttf
+        weight: 300
+      - asset: fonts/Poppins-Regular.ttf
+        weight: 400
+      - asset: fonts/Poppins-Medium.ttf
+        weight: 500
+      - asset: fonts/Poppins-SemiBold.ttf
+        weight: 600
+      - asset: fonts/Poppins-Bold.ttf
+        weight: 700
+      - asset: fonts/Poppins-ExtraBold.ttf
+        weight: 800
+      - asset: fonts/Poppins-Black.ttf
+        weight: 900
