--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   badges: ^3.0.2
   bloc: ^8.1.0
+  cached_network_image: ^3.3.0
   carousel_slider: ^4.2.1
   change_app_package_name: ^1.1.0
   country_icons: ^2.0.2
